@@ -239,10 +239,6 @@ d1778dd6c1fa3ccaf6d195fee8328b94b0364d3d assets\mmorpg\models\item\uniques\sword
 ca1003e72af918f46c7ca3c99d54d957f0369999 data\mmorpg\advancements\mine_and_slash\add_affix.json
 88c5586c50616c30a1e8c49bc112e6c68869a165 data\mmorpg\advancements\mine_and_slash\adv_map.json
 1e45cc8f96867b1be05f6e2c97d9e7e8b013b73a data\mmorpg\advancements\mine_and_slash\auto_salvage_bag0.json
-a855bde745d40395ce1a7519c85c61c38365c8f6 data\mmorpg\advancements\mine_and_slash\auto_salvage_bag1.json
-aa3a53bb35749bed134cd6e3f00de50650415867 data\mmorpg\advancements\mine_and_slash\auto_salvage_bag2.json
-ad3f06aa2f4bcd19bae21301164ad4eb8af7b057 data\mmorpg\advancements\mine_and_slash\auto_salvage_bag3.json
-7688e5e0df22161baab5887fd12de1b98aee030d data\mmorpg\advancements\mine_and_slash\auto_salvage_bag4.json
 b252bce4d477b3672a029d448157018a690a11d7 data\mmorpg\advancements\mine_and_slash\chaos_orb.json
 d3407d97c16aff0f823dcd0013b3ef7d58000325 data\mmorpg\advancements\mine_and_slash\currency_bag.json
 cd6dc2a8eb3abab5a11ed8d0669886a7a3469d15 data\mmorpg\advancements\mine_and_slash\kill_mob_rarity_-2.json
@@ -257,7 +253,7 @@ b76f0df6f866cd3a507c485c4d7bcbe1e0464aa9 data\mmorpg\advancements\mine_and_slash
 00d240c8cf8cf9f59e5e194c37b2b1d4937cb1c8 data\mmorpg\advancements\mine_and_slash\player_level_10.json
 0d5da3122141ad8b4feae7148c01d6f3a398d758 data\mmorpg\advancements\mine_and_slash\player_level_20.json
 09297cf12af1ea1578a7973522c265093a87c3e0 data\mmorpg\advancements\mine_and_slash\player_level_50.json
-783fd93a8d8dcb9f5a4b6c3111e5f9860d10aa6d data\mmorpg\advancements\mine_and_slash\player_level_75.json
+e319460e3cc36b1045bb8cb42342253b0a2ddedc data\mmorpg\advancements\mine_and_slash\player_level_60.json
 b6fb3cbd6b78712a9573aa6b9ebf3299ee6baa53 data\mmorpg\advancements\mine_and_slash\repair.json
 e284e5b9c4ef82e73a0b069f641eb188eac5eb56 data\mmorpg\advancements\mine_and_slash\root.json
 959c9e78bbf075aafa2bb4ebfca71eedaf4c4620 data\mmorpg\advancements\mine_and_slash\salvage.json
@@ -679,21 +675,21 @@ f84f1ce7a838be1f934b82167c94c27d8cb6507c data\mmorpg\recipes\mat\crystallized_es
 1ae157ed18f265da83c446ee1daf0941448526ed data\mmorpg\recipes\mat\infused_iron.json
 a03ed1a87b193f1829d9ea2a001540440d0c5539 data\mmorpg\recipes\mat\mythic_essence.json
 89e6b43e91e0217a25a3d5460b52a4b0bbd0860f data\mmorpg\recipes\teleport_scroll.json
-64a92756f53d4e0d3d531c2b15ac510ee9915865 data\mmorpg\runes\ano.json
+35fa0ea0125cd74b00b045009e694b65a64e354e data\mmorpg\runes\ano.json
 9373b99d25e26b012ca8b80123d8be7b162c5d9c data\mmorpg\runes\ber.json
-b65c40cfc73bf94539cbc839cea1d530db1ca2a3 data\mmorpg\runes\cen.json
-346cf236687441957017cd71f1220b86110209a1 data\mmorpg\runes\dos.json
-df7b2dc13aa9b866ca20c6a3f6bfaca45fde1e27 data\mmorpg\runes\goh.json
-5e4b35d4ed64f19eb455e3bfa2be2e6d40565b83 data\mmorpg\runes\ita.json
-d89e2b2fd21b4a2495153b8c66591f5582f119b0 data\mmorpg\runes\mos.json
+8564e7d2e42670140c355db8a5c7be43f3e1d20d data\mmorpg\runes\cen.json
+cd71d9423cb5696eac1b8a5e32d4d14354b3d33b data\mmorpg\runes\dos.json
+c8468e1eb3171976e37a816180faec28b7b4da35 data\mmorpg\runes\goh.json
+7ef66b74f04d2890aaceaa4c2f849f6aa347b50b data\mmorpg\runes\ita.json
+9b4d199e89acb171aa077e9462582bf220551875 data\mmorpg\runes\mos.json
 cb20157d8c2a9a4e00f4194c0eee56348ff398f2 data\mmorpg\runes\oni.json
 c167d18849dd1bd2d30bb1b9bc1aa82f061d13ef data\mmorpg\runes\psi.json
-dedbaaf444519a25d590a0c1ebb9a4fedd71b2a9 data\mmorpg\runes\qar.json
-505e7f3822d440bc11d75888a77c86d3e44a73bc data\mmorpg\runes\rah.json
-0b3edf2c849b252b294467accff7715947e50662 data\mmorpg\runes\voh.json
-55b8d81847b047a5a216f6a1c4a5d85931e8b247 data\mmorpg\runes\wor.json
-d8dda707da0534e88621e1ce913dd80b24430080 data\mmorpg\runes\xah.json
-b7e5d989f4c0fa4e2da1fed24c60d856e640d382 data\mmorpg\runes\yon.json
+79b6e82c6d5481c242eae6ad33742149c9588ff7 data\mmorpg\runes\qar.json
+a226e574c81931477bfd55f542b57ef24c492e42 data\mmorpg\runes\rah.json
+4c8f459a543b51c32080134707e7c827a1d8c957 data\mmorpg\runes\voh.json
+48257011e78c26d125c95cc20ce09e8f61922384 data\mmorpg\runes\wor.json
+d406edf180a9b8f930cc2ff1bcf9409cb7d35dca data\mmorpg\runes\xah.json
+567e38e951498952c3da9f4c9ffde12902c30d7a data\mmorpg\runes\yon.json
 9b58fa2256420ce10629bdfc5c88b90b0e8ea017 data\mmorpg\rune_words\2_runes\bloom.json
 209187492313231e12592101b7add91861b32c13 data\mmorpg\rune_words\2_runes\magic.json
 ab9e19f4f914b62731562e8a08f8c62ab32cb68c data\mmorpg\rune_words\2_runes\magma.json
