@@ -1,35 +1,0 @@
-{
-  "parent": "mmorpg:mine_and_slash/auto_salvage_bag3",
-  "display": {
-    "icon": {
-      "item": "mmorpg:auto_salvage_bag4"
-    },
-    "title": {
-      "text": "§6Auto Salvage Bag"
-    },
-    "description": {
-      "translate": "mmorpg.advancement.desc.autosalvagebag"
-    },
-    "frame": "goal",
-    "show_toast": true,
-    "announce_to_chat": true,
-    "hidden": false
-  },
-  "criteria": {
-    "auto_salvage_bag4": {
-      "trigger": "minecraft:inventory_changed",
-      "conditions": {
-        "items": [
-          {
-            "item": "mmorpg:auto_salvage_bag4"
-          }
-        ]
-      }
-    }
-  },
-  "requirements": [
-    [
-      "auto_salvage_bag4"
-    ]
-  ]
-}
